--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,14 @@
           <!-- Картки зображень -->
         </ul>
       </div>
-      <button type="button" class="load-more">Load more</button>
+      <button type="button" class="load-more is-hidden">
+        <span
+          class="spinner-border spinner-border-sm spinner is-hidden"
+          role="status"
+          aria-hidden="true"
+        ></span>
+        <span class="label"> Load more </span>
+      </button>
     </section>
     <script src="index.js" type="module"></script>
   </body>
